syntax = "proto3";
package com.xabe.vehicle.update;

import "vehicle_id.proto";
import "color_type.proto";

option java_package = "com.xabe.vehicle.api.grpc.update.updatevehicleecolor";

message UpdateVehicleColorRequest {

  com.xabe.vehicle.VehicleId id = 1;

  int64 timestamp = 2;

  string store_id = 3;

  message I18NText {
    string locale = 1;
    string text = 2;
  }

  message Color {

    string id = 1;

    com.xabe.vehicle.ColorType type = 2;

    repeated I18NText color_names = 3;
  }

  repeated Color colors = 4;

}